clusters/geolocview-cluster-1/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: gcr.io/third-nature-400716/backend:9b6b0c01e15e6d41817982d81c7de155ea6ff9e3
        ports:
        - containerPort: 8080
