clusters/geolocview-cluster-1/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/third-nature-400716/frontend:dbcec43ac82704710a90f35770e14c1319a4ba99
        ports:
        - containerPort: 8080 # Replace with your frontend container's port
